Fixed style regression on drop-down menu buttons in Clippings Manager

--- a/src/pages/clippingsMgr.css
+++ b/src/pages/clippingsMgr.css
@@ -198,7 +198,7 @@ input[type="search"] {
     height: 24px;
 }
 
-select {
+select[size] {
     background-color: var(--color-listbox-bkgd);
     color: var(--color-default-text);
     font: caption;
